# mohd-manifest-cli

./: .gitignore  main.py  metadata.tsv  pyproject.toml
src/mohd_manifest_cli/: __init__.py  cli.py  constants.py  get-failed.py
