[project]
dependencies = []
name = "mohd-manifest-cli"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
mohd-manifest = "mohd_manifest_cli.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mohd_manifest_cli = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gspread = ">=5.12.4,<6"
oauth2client = ">=4.1.3,<5"
polars = ">=1.37.1,<2"
tqdm = ">=4.67.1,<5"
