[project]
name = "mohd-manifest-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gspread>=5.12.4,<6",
  "oauth2client>=4.1.3,<5",
  "polars>=1.37.1,<2",
  "tqdm>=4.67.1,<5"
]

[project.scripts]
mohd-manifest = "mohd_manifest_cli.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
